LAB2 - refactors